--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,8 @@ wasmer-runtime = { path = "../wasmer/lib/runtime"}
 wasmer-runtime-core = { path = "../wasmer/lib/runtime-core" }
 wasmer-llvm-backend = { path = "../wasmer/lib/llvm-backend"} 
 
+wasmtime = { version = "0.19.0" }
+
+anyhow = { version = "1.0.32" }
+
 portaudio = "0.7.0"
