--- a/plugins/gain/Cargo.toml
+++ b/plugins/gain/Cargo.toml
@@ -10,3 +10,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "0.2.64"
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
+panic = "abort"
