--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-web-view = { version = "0.6.3" }
+#web-view = { version = "0.6.3" }
+web-view = { path = "./external/web-view/" }
 rust-embed = { version = "5.5.1", features = ["interpolate-folder-path"] }
 rocket = { version = "0.4.5", default-features = false }
 rocket_contrib = { version = "0.4.5" }
