--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,14 @@ edition = "2018"
 [dependencies]
 #web-view = { version = "0.6.3" }
 web-view = { path = "./external/web-view/" }
-rust-embed = { version = "5.5.1", features = ["interpolate-folder-path"] }
+rust-embed = { version = "5.6.0", features = ["interpolate-folder-path"] }
 rocket = { version = "0.4.5", default-features = false }
 rocket_contrib = { version = "0.4.5" }
 serde = { version = "1.0.114", features = ["derive"] }
-serde_json = { version = "1.0.56" }
+serde_json = { version = "1.0.57" }
 serde_repr = { version = "0.1.6" }
 vst = { path = "../vst-rs/" }
-curl = { version = "0.4.30"}
+curl = { version = "0.4.31"}
 crossbeam-channel = { version = "0.4.3" }
 
 # wasmer-runtime = { version = "0.17.1"}
@@ -31,7 +31,7 @@ wasmtime = { version = "0.19.0" }
 anyhow = { version = "1.0.32" }
 
 portaudio = "0.7.0"
-midir = { path = "./external/midir/"}
+midir = { git = "https://github.com/bgaster/midir"}
 
 [dependencies.rimd]
 git = "https://github.com/RustAudio/rimd.git"
